--- a/.github/workflows/n8n-ci.yml
+++ b/.github/workflows/n8n-ci.yml
@@ -7,16 +7,9 @@ on:
       - '.github/workflows/n8n-ci.yml'
 
 jobs:
-  build-api:
+  n8n:
     runs-on: self-hosted
-    env:
-      POSTGRES_USER: ${{ vars.POSTGRES_USER }}
-      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      POSTGRES_DB: ${{ vars.POSTGRES_DB }}
-      POSTGRES_NON_ROOT_USER: ${{ vars.POSTGRES_NON_ROOT_USER }}
-      POSTGRES_NON_ROOT_PASSWORD: ${{ secrets.POSTGRES_NON_ROOT_PASSWORD }}
-      N8N_EXECUTIONS_MODE: queue
-      QUEUE_MODE: redis
+    environment: stage
     steps:
       - name: show env
         run: printenv
