--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -34,11 +34,12 @@ services:
       - DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.n8n.rule=Host(`n8n.rose-croix-d-or.org`)" # Sous-domaine pour n8n
-      - "traefik.http.routers.n8n.entrypoints=websecure"
-      - "traefik.http.routers.n8n.tls.certresolver=myresolver"
-      - "traefik.http.services.n8n.loadbalancer.server.port=5678"
+      traefik.docker.network: rconetwork
+      traefik.enable: true
+      traefik.http.routers.n8n.rule: Host(`n8n.rose-croix-d-or.org`) # Sous-domaine pour n8n
+      traefik.http.routers.n8n.entrypoints: websecure
+      traefik.http.routers.n8n.tls.certresolver: myresolver
+      traefik.http.services.n8n.loadbalancer.server.port: 5678
     ports:
       - 5678:5678
     links:
