Remove MailingList + default datetime

--- a/.github/workflows/helios-api-ci.yml
+++ b/.github/workflows/helios-api-ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'helios/api/**'
+      - 'helios/HeliosDataBaseContext/**'
       - '.github/workflows/helios-api-ci.yml'
     branches:
       - main
